# master_doko_reinforcement_learning

./: Cargo.toml  README.md  build_and_run_az_doko.sh  build_and_run_compare.sh  build_and_run_compare_mcts_prev.sh  build_and_run_gather.sh  build_and_run_main.sh  build_and_run_main2.sh  build_run_experiment.sh  experiment_2_all_against_all.csv  prepare_cloud_impi.sh  prepare_cloud_impi_proxy.sh  sync_cloud_impi.sh  sync_cloud_impi_proxy.sh  update_bridge.sh  upload_cloud.sh  upload_cloud2.sh  upload_cloud_impi.sh
rs-doko/: Cargo.toml
rs-doko-alpha-zero/: Cargo.toml
rs-doko-alpha-zero/src/: lib.rs
rs-doko-assignment/: Cargo.toml
rs-doko-assignment/src/: assignment.rs  lib.rs
rs-doko-embeddings/: Cargo.toml
rs-doko-embeddings/src/: doko_net.rs  encode_state.rs  main.rs
rs-doko-embeddings2/: Cargo.toml
rs-doko-embeddings2/src/: RotArr.rs  doko_net.rs  encode_state.rs  experience_replay_ta.rs  main.rs
rs-doko-evaluator/: Cargo.toml
rs-doko-evaluator/src/: lib.rs
rs-doko-evaluator/src/doko/: evaluate_single_game.rs
rs-doko-evaluator/src/doko/policy/: policy.rs  random_policy.rs
rs-doko-evaluator/src/full_doko/: evaluate_single_game.rs
rs-doko-evaluator/src/full_doko/policy/: az_policy.rs  mcts_policy.rs  policy.rs  random_policy.rs
rs-doko-experiments/: Cargo.toml
rs-doko-experiments/src/: csv_writer_thread.rs  doko_single_game.rs  experiment_0_5.rs  experiment_0_5_fdo.rs  experiment_1.rs  experiment_1_fdo.rs  experiment_2.rs  experiment_2_fdo.rs  experiment_3.rs  experiment_3_ttt.rs  experiment_4_fdo.rs  main.rs  simple_tree.rs
rs-doko-impi/: Cargo.toml
rs-doko-impi/src/: csv_writer_thread.rs  forward.rs  get_weighted_action.rs  impi_experience_replay_buffer.rs  lib.rs  mcts_full_doko_policy.rs  modified_random_full_doko_policy.rs  network.rs  next_consistent.rs  not_main.rs  save_log_maybe.rs  tensor_test.rs  tensorboard.rs  train_impi.rs  training.rs
rs-doko-impi/src/eval/: batch_eval_net_fn.rs  batch_processor.rs  eval_net_fn.rs  single_eval_net_fn.rs
rs-doko-mcts/: Cargo.toml
rs-doko-mcts/src/: lib.rs  policy.rs  save_log_maybe.rs
rs-doko-mcts/src/env/: env_state.rs
rs-doko-mcts/src/env/envs/: env_state_doko.rs  env_state_full_doko.rs
rs-doko-mcts/src/example/: tic_tac_toe.rs  tic_tac_toe_impl.rs  tic_tac_toe_player.rs
rs-doko-mcts/src/mcts/: mcts.rs  node.rs
rs-doko-networks/: Cargo.toml
rs-doko-networks/src/: lib.rs
rs-doko-networks/src/doko/var1/: encode_for_impi_gan.rs  encoder.rs
rs-doko-networks/src/full_doko/: ipi_network.rs  pi_network.rs  res_block.rs  utils.rs
rs-doko-networks/src/full_doko/var1/: announcement.rs  bool.rs  card.rs  encode_ipi.rs  encode_pi.rs  game_type.rs  ipi_output.rs  phase.rs  player.rs  reservation.rs  trick_method2.rs  visible_reservation.rs
rs-doko-networks/src/full_doko/var2/: encode_action.rs  encode_annoucnement_team.rs  encode_position_or_unknown.rs  encode_reservation_or_card_or_none.rs  encode_subposition.rs
rs-doko-py-bridge/: Cargo.toml  pyproject.toml
rs-doko-py-bridge/python/: SelfAttention.py  SelfAttentionMask.py  TensorboardController.py  TransformerBlock.py  alpha_zero_training.py  az_doko.py  az_ttt.py  bridge.py  create_ar.py  create_az.py  gather_games.py  main.py  main2.py  play_single_game.py  run_comparison.py  run_mcts_vs_prev.py  server.py  test_main.py
rs-doko-py-bridge/python/gan/: Trainer.py
rs-doko-py-bridge/python/gan/doko/: DokoDiscriminator.py  DokoGenerator.py  start_trainer.py
rs-doko-py-bridge/python/rs_2/: __init__.py
rs-doko-py-bridge/python/sonstiges/: plot_embeds.py
rs-doko-py-bridge/src/: lib.rs  tensorboard.rs
rs-doko-py-bridge/src/alpha_zero/: alpha_zero_training.rs  csv_writer_thread.rs  doppelkopf.rs  network.rs  tic_tac_toe.rs
rs-doko-py-bridge/src/compare_impi/: all_policies.rs  compare_impi.rs  evaluate_single_game_impi.rs  policy_fusion.rs  run.rs  run_mcts_vs_previous.rs
rs-doko-py-bridge/src/gather_games/: db.rs  gather_games.rs
rs-doko-py-bridge/src/impi/: execute.rs  network.rs
rs-doko-py-bridge/src/single_game/: play_single_game.rs
rs-doko-py-bridge/src/train_impi2/: train_impi2.rs
rs-doko-py-bridge/src/view_server/: api.rs  view_server.rs
rs-doko/src/: action.rs  basic.rs  card.rs  hand.rs  lib.rs  main.rs  observation.rs  player.rs  reservation.rs  stats.rs  teams.rs  test_generator.rs  trick.rs  util.rs
rs-full-doko/: Cargo.toml
rs-full-doko-cmd/: Cargo.toml
rs-full-doko-cmd/src/: main.rs
rs-full-doko/src/: lib.rs
rs-full-doko/src/action/: action.rs  allowed_actions.rs
rs-full-doko/src/announcement/: announcement.rs  announcement_round.rs  announcement_set.rs  calc_announcement.rs
rs-full-doko/src/basic/: color.rs  phase.rs  team.rs
rs-full-doko/src/card/: card_color_masks.rs  card_in_trick_logic.rs  card_to_color.rs  card_to_eyes.rs  cards.rs
rs-full-doko/src/display/: display.rs
rs-full-doko/src/game_type/: game_type.rs
rs-full-doko/src/hand/: hand.rs  hand_iter.rs
rs-full-doko/src/matching/: card_matching.rs  gather_impossible_colors.rs  is_consistent.rs
rs-full-doko/src/observation/: observation.rs
rs-full-doko/src/player/: player.rs  player_set.rs
rs-full-doko/src/reservation/: reservation.rs  reservation_allowed_action_logic.rs  reservation_round.rs  reservation_winning_logic.rs  visible_reservations_logic.rs
rs-full-doko/src/state/: state.rs
rs-full-doko/src/stats/: stats.rs
rs-full-doko/src/stats/additional_points/: additional_points.rs  doppelkopf.rs  fuchs_gefangen.rs  last_trick_karlchen.rs
rs-full-doko/src/stats/basic_points/: basic_draw_points.rs  basic_winning_points.rs
rs-full-doko/src/stats/win_conditions/: kontra_won.rs  re_won.rs
rs-full-doko/src/team/: team_logic.rs
rs-full-doko/src/trick/: trick.rs  trick_winning_player_logic.rs
rs-full-doko/src/util/: po_arr.rs  po_vec.rs  po_zero_arr.rs  rot_arr.rs
rs-game-utils/: Cargo.toml
rs-game-utils/src/: bit_flag.rs  lib.rs
rs-parallel/: Cargo.toml
rs-parallel/src/: Buffer.rs  Buffer2.rs  main.rs  main_old.rs
rs-tictactoe/: Cargo.toml
rs-unsafe-arena/: Cargo.toml
(+76 files in other folders)
