[package]
name = "rs-doko-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
rand_distr = "0.5.0-alpha.3"
rs-doko = { path = "../rs-doko" }
rs-full-doko = { path = "../rs-full-doko" }
rs-doko-mcts = { path = "../rs-doko-mcts" }
rs-doko-evaluator = { path = "../rs-doko-evaluator" }
rs-doko-alpha-zero = { path = "../rs-doko-alpha-zero" }
rs-tictactoe = { path = "../rs-tictactoe" }
rs-unsafe-arena = { path = "../rs-unsafe-arena" }
rayon = "1.10.0"
csv = "1.3.0"
indicatif = "0.17.9"
itertools = "0.14.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tensorboard-rs = "0.5.9"
futures = "0.3.30"
async-trait = "0.1.85"
async-channel = "2.3.1"
tokio-metrics = "0.4.0"
mimalloc = { version = "*"}