[package]
name = "rs-doko-mcts"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
log = "0.4.22"

rs-unsafe-arena = { path = "../rs-unsafe-arena" }
rs-doko = { path = "../rs-doko" }
rs-full-doko = { path = "../rs-full-doko" }
rs-doko-assignment = { path = "../rs-doko-assignment" }
heapless = "0.8.0"
strum = "0.26.3"
strum_macros = "0.26.4"
graphviz-rust = "0.9.3"
rolling-stats = "0.7.0"
chrono = "0.4.40"