[package]
name = "rs-doko-networks"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-doko = { path = "../rs-doko" }
rs-full-doko = { path = "../rs-full-doko" }
rand = "0.9.0-alpha.2"
heapless = "0.8.0"
array-concat = "0.5.3"
strum = "0.26.3"
strum_macros = "0.26.4"
log = "0.4.22"
enumset = "1.1.5"