[package]
name = "rs-doko-py-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_doko_py_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
numpy = "0.23.0"
rand = "0.9.0-alpha.2"
rs-doko = { path = "../rs-doko" }
rs-doko-networks = { path = "../rs-doko-networks" }
image= "0.25.5"
rs-doko-impi = { path = "../rs-doko-impi" }
tokio = { version = "1.43.0", features = ["full"] }
rs-full-doko = { path = "../rs-full-doko" }
rs-doko-alpha-zero = { path = "../rs-doko-alpha-zero" }
rs-tictactoe = { path = "../rs-tictactoe" }
async-trait = "0.1.87"
rs-unsafe-arena = { path = "../rs-unsafe-arena" }
async-channel = "2.3.1"
rs-doko-evaluator = { path = "../rs-doko-evaluator" }
indicatif = "0.17.11"
csv = "1.3.1"
tempfile = "3.18.0"
futures = "0.3.31"

sled = "0.34.7"
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
rs-doko-assignment = { path = "../rs-doko-assignment" }

strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.140"

rayon = "1.10.0"

enumset = "1.1.5"
itertools = "0.13.0"

[profile.release]
debug = true